Fix variables never got updated for scrollbar spacing.

--- a/css/context.css
+++ b/css/context.css
@@ -1388,7 +1388,6 @@
 
 ._3sTMvhkGXqBzwhsP2-IA5P._2IZUdldK7vmIvkXLEEmyu9 {
   margin: 0 !important;
-  margin: 0 !important;
 }
 
 ._3sTMvhkGXqBzwhsP2-IA5P {
