--- a/css/core.css
+++ b/css/core.css
@@ -5352,7 +5352,7 @@ div._1ugNiylO2vKXhirsGocAxa:hover::-webkit-scrollbar-button:single-button:decrem
 div.FriendsListContent::-webkit-scrollbar-button:single-button:decrement:vertical:window-inactive,
 div.FriendsListContent::-webkit-scrollbar-button:single-button:decrement:vertical:not(:window-inactive),
 div.FriendsListContent:hover::-webkit-scrollbar-button:single-button:decrement:vertical:not(:window-inactive) {
-  --header-height: var(--zehn-size-titlebar-height) + var(--quickaccess-height) + var(--buttons-height) + var(--search-height) + var(--user-height);
+  --header-height: var(--zehn-size-titlebar-height) + var(--friends-quickaccess-spacing) + var(--friends-buttons-spacing) + var(--friends-search-spacing) + var(--friends-user-spacing);
 }
 
 /* CHAT */
@@ -5373,14 +5373,14 @@ div.chatHistoryScroll:hover::-webkit-scrollbar-button:single-button:decrement:ve
 div._3lDczhulqraStjCitLYJ1K::-webkit-scrollbar-button:single-button:decrement:vertical:window-inactive,
 div._3lDczhulqraStjCitLYJ1K::-webkit-scrollbar-button:single-button:decrement:vertical:not(:window-inactive),
 div._3lDczhulqraStjCitLYJ1K:hover::-webkit-scrollbar-button:single-button:decrement:vertical:not(:window-inactive) {
-  --header-height: var(--zehn-size-navbar-height) + var(--playbar-space);
+  --header-height: var(--zehn-size-navbar-height) + var(--library-playbar-spacing);
 }
 
 /* DOWNLOADS */
 div._1ugNiylO2vKXhirsGocAxa::-webkit-scrollbar-button:single-button:decrement:vertical:window-inactive,
 div._1ugNiylO2vKXhirsGocAxa::-webkit-scrollbar-button:single-button:decrement:vertical:not(:window-inactive),
 div._1ugNiylO2vKXhirsGocAxa:hover::-webkit-scrollbar-button:single-button:decrement:vertical:not(:window-inactive) {
-  --header-height: var(--zehn-size-navbar-height) + var(--downloads-space);
+  --header-height: var(--zehn-size-navbar-height) + var(--library-downloads-spacing);
 }
 
 /* ------------------------------------------------------------------------------------------------------------------ */
